# hw3

./: .pre-commit-config.yaml  README.md  pyproject.toml  readme.md
.github/workflow/: pytest.yml
.github/workflows/: bandit.yml  precommit.yml  pytest.yml
hw3/: hw2_debugging.py  rand.py
tests/: test_duplicate_input.py  test_empty_input.py  test_merge_sort.py  test_negative_input.py  test_none_input.py  test_single_element_input.py  test_six_elements.py
