[project]
name = "hw3"
version = "0.1.0"
description = "se25 group 12 hw3"
authors = [
    {name = "VisualDust",email = "gavin@gong.host"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
