[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["VisualDust <gavin@gong.host>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^25.1.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pylint = "^3.3.4"
pyflakes = "^3.2.0"
bandit = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
